gobotany/static/css/styles.css
/* ... */
#taxon #sb-nav-close, #plant-id #sb-nav-close, #plant-id-2 #sb-nav-close,
#family #sb-nav-close, #genus #sb-nav-close {
    top: 56px !important;
}
#taxon #sb-title-inner a, #plant-id #sb-title-inner a,
#plant-id-2 #sb-title-inner a, #family #sb-title-inner a,
#genus #sb-title-inner a {
    color: #fff;
    text-decoration: underline;
}
#sb-counter {
    font-family: "Trebuchet MS", Helvetica, Arial, sans-serif;
}

/* Help section: sidebar styles */

#getting-started #sidebar, #about #sidebar{
    height: 1046px;
}
#advanced-map #sidebar {
    height: 746px;
}
#glossary #sidebar, #video-help-topics #sidebar {
    height: 1420px;
}
#getting-started #sidebar a:hover, #about #sidebar a:hover,
#advanced-map #sidebar a:hover, #glossary #sidebar a:hover, 
#video-help-topics #sidebar a:hover {
    text-decoration: none;
}

/*///////////////////////////**
Getting Started Page Styles
////////////////////////////*/
#getting-started #sidebar .section:last-child {
    margin-top: 48px;
}
#getting-started .question {
	padding: 18px 0 18px 45px;	
	border-bottom: 1px solid #e2dfcb;
}
#getting-started .first.question {
	margin: 11px 0 0 0;
	border-top: 1px solid #e2dfcb;
	background: url(/static/images/icons/1.png) left 18px no-repeat;	
}
#getting-started .second.question {
	background: url(/static/images/icons/2.png) left 18px no-repeat;	
}
#getting-started .third.question {
	background: url(/static/images/icons/3.png) left 18px no-repeat;	
}
#getting-started .fourth.question {
	background: url(/static/images/icons/4.png) left 18px no-repeat;	
}
#getting-started .fifth.question {
	background: url(/static/images/icons/5.png) left 18px no-repeat;	
}
#getting-started .sixth.question {
	margin: 0 0 11px 0;
	background: url(/static/images/icons/6.png) left 18px no-repeat;	
}
#getting-started a.screenshot {
	float: right;	
	margin: 0 0 0 15px;
	color: #1A2E11;
	text-align: center;
}
#getting-started a.screenshot:hover {
	text-decoration: none;	
}
#getting-started a.screenshot img {
    margin: 10px 0;
    vertical-align: middle;
}
#getting-started a.screenshot img.screenshot-thumb {
    border: 5px solid #fff;
	display: block;	
	margin: 0;
	box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);
	-moz-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);
	-webkit-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);	
}
#getting-started .question ul {
	padding: 0 0 0 15px;
	list-style-type: disc;	
}
#getting-started a.onward-btn {
	display: block;
	float: right;
	width: 280px;
	height: 32px;
	margin: 10px 0 0 0;
	background: url(/static/images/layout/onward-btn-orange.png) 0 0 no-repeat transparent;
	text-indent: -9000px;	
}
#getting-started a.onward-btn:hover {
	background-position: 0 -32px;	
}
#getting-started a.onward-btn:active {
	background-position: 0 -64px;	
}
#getting-started label.got-it {
	display: block;
	float: left;
	margin: 19px 0 0 0;	
}
#getting-started label.got-it input {
	margin: 0 5px 0 0;	
}
#getting-started a.show {
    cursor: pointer;
}

/*///////////////////////////**
About Page Styles
////////////////////////////*/

#main ul.about {
	list-style-type:disc;
	margin: 10px 0 30px 15px;
	line-height: 200%;
	
}
#main ul.aboutlast {
	list-style-type:disc;
	margin: 10px 0 60px 15px;
	line-height: 200%;
	
}

img.margin {
	float: right;
	margin: 10px 0 20px 20px;
}

img.margin-bookcover {
	float: right;
	margin: 10px 89px 20px 20px;
}

/* Video Help Topics page styles */

.video-row {
    margin: 20px 0;
}
.video-topic {
    float: left;
    margin-right: 16px;
    width: 220px;
}
.video-topic img {
    height: 137px;
    width: 220px;
}
.video-topic h4 {
    line-height: 105%;
    margin-top: 4px;
}
.video-topic .missing-image {
    border: 1px solid #508e31;
    height: 135px;
    width: 218px;
}
.video-topic .missing-image p {
    white-space: nowrap;
    margin-left: -70px;
    margin-top: -10px;
}

/* Legal information page styles */

#terms-of-use #main ol.terms {
    list-style-type: upper-roman;
	margin: 10px 0 30px 15px;
	line-height: 200%;
}

#terms-of-use ol.terms li {
    font-weight: bold;
}

#terms-of-use ol.terms li p {
    font-weight: normal;
}

#terms-of-use ol.terms ul {
    list-style-type: disc;
	margin: 10px 0 30px 15px;
	line-height: 200%;
}

#terms-of-use ol.terms ul li {
    font-weight: normal;
}

/* Advanced ID Tools Placeholder styles */

#advanced-id #main {
	position: relative;
}

#advanced-id #main .dk-landing-section {
	width: 330px;
	float: left;
	font-family: Verdana, sans-serif;
}

#advanced-id #main .dk-landing-section section {
	margin: 20px 0 0;
}

#advanced-id #main .dk-landing-section section p {
	margin: 10px 0;
}

#advanced-id #main .dk-landing-section section ul {
	margin: 10px 0;
	padding: 0 0 0 15px;
	list-style-type: disc;
}

#advanced-id #main .dk-landing-section section ul li {
	margin: 10px 0;	
}

#advanced-id #main .landing-divider {
	height: 410px;
	width: 1px;
	background-color: #b4d57f;
	position: absolute;
	top: 10px;
	left: 350px;
	
}

#advanced-id #main .dichkey-buttons {
	margin: 0;
}

#advanced-id #main .dichkey-buttons div {
	width: 50%;
	float: left;
	padding: 15px 0 0;
}

/* buttons */
#advanced-id #main .dichkey-buttons a {
	margin: 10px auto;
}

#advanced-id #main .dichkey-buttons a.go-fullkey-btn {
	background: url(/static/images/layout/go-fullkey-btn.png) 0 0 no-repeat transparent;
	display: block;
	width: 244px;
	height: 41px;
	text-indent: -9999px;
	margin: 0 auto;
}

#advanced-id #main .dichkey-buttons a.go-fullkey-btn:hover {
	background-position: 0 -41px;
}

#advanced-id #main .dichkey-buttons a.go-fullkey-btn:active {
	background-position: 0 -82px;
}

/* using-dich-key buttons */
#advanced-id #main a.go-dichkey-btn {
	background: url(../images/layout/go-dichkey-btn.png) 0 0 no-repeat transparent;
	display: block;
	width: 244px;
	height: 41px;
	text-indent: -9999px;
	margin: 0 auto;
}

#advanced-id #main a.go-dichkey-btn-user {
	margin: 20px auto 0;
	z-index: 2;
}
/* ... */

